<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperrecipe"
    tools:context=".AddRecipe">


    <TextView
        android:id="@+id/activity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_title_add"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="#ffff"/>


    <TextView
        android:id="@+id/recipeID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:text="@string/recipe_id_tv"
        android:textColor="#ffff"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipeTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="104dp"
        android:text="@string/recipe_title_tv"
        android:textColor="#ffff"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/recipeTitleET"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#ffff"
        android:hint="@string/recipe_name_hint"
        android:textColorHint="#E57373"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintLeft_toRightOf="@id/recipeTitleTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipeContentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="92dp"
        android:text="@string/recipe_content_tv"
        android:textColor="#ffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/recipeContentMET"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <EditText
        android:id="@+id/recipeContentMET"
        android:layout_width="409dp"
        android:layout_height="276dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#ffff"
        android:ellipsize="start"
        android:gravity="center_horizontal"
        android:hint="@string/recipe_content_hint"
        android:inputType="textMultiLine"
        android:textColorHint="#E57373"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/doneButton"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:onClick="addRecipe"
        android:src="@drawable/doneicon"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipeContentMET" />

    <ImageView
        android:id="@+id/deleteIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:src="@drawable/deleteicon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="deleteProduct"/>

</android.support.constraint.ConstraintLayout>

